fixing spacing

--- a/blocks/shop-featured-products/shop-featured-products.css
+++ b/blocks/shop-featured-products/shop-featured-products.css
@@ -245,6 +245,10 @@
   padding-bottom: 1.5rem
 }
 
+.shop-featured-products-wrapper :is(.pt-12) {
+  padding-top: 3rem
+}
+
 .shop-featured-products-wrapper :is(.text-2xl) {
   font-size: 1.5rem;
   line-height: 2rem
